--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         <activity
             android:name=".gui.GameActivity"
             android:screenOrientation="landscape">
+        </activity>
+        <activity android:name=".gui.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
