--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,18 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".gui.GameActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
         <activity android:name=".gui.IntroActivity">
+
+        </activity>
+        <activity android:name=".gui.MainActivity" />
+        <activity android:name=".gui.LeaderboardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".gui.MainActivity"></activity>
     </application>
 
 </manifest>
