--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         <activity android:name=".gui.IntroActivity">
 
         </activity>
-        <activity android:name=".gui.model.WinnerActivity"></activity>
+        <activity
+            android:name=".gui.model.WinnerActivity"
+            android:screenOrientation="landscape"></activity>
         <activity android:name=".gui.MainActivity">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
