activity: Remove LeaderboardActivityListener for now

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".gui.GameActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".gui.IntroActivity">
 
-        </activity>
+        <activity android:name=".gui.IntroActivity"
+            android:screenOrientation="landscape"/>
+
         <activity
             android:name=".gui.model.WinnerActivity"
             android:screenOrientation="landscape"></activity>
-        <activity android:name=".gui.MainActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
-        <activity android:name=".gui.LeaderboardActivity">
+        <activity
+            android:name=".gui.LeaderboardActivity"
+            android:screenOrientation="landscape" />
+
+        <activity
+            android:name=".gui.MainActivity"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
-
 </manifest>
