--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".gui.activity.InfoActivity"></activity>
+        <activity
+            android:name=".gui.activity.InfoActivity"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
